--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,8 +9,13 @@ body {
     min-height: 100dvh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /*justify-content: center;*/
     flex-direction: column;
+    margin-bottom: 4rem;
+}
+
+.form-container {
+    margin-top: 10rem;
 }
 
 #urlInput {
@@ -138,5 +143,18 @@ summary {
     display: none;
 }
 
+.imagesContainer {
+    display: none;
+}
 
+.imagesContainer h1 {
+    margin-bottom: 0;
+}
 
+.imagesFlexContainer{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+}
